<resources>
    <string name="time_picker_dialog_title">Set time</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_time_set">Set</string>
    <string name="date_time_done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="time_picker_increment_minute_button">Increment minute</string>
    <string name="time_picker_decrement_minute_button">Decrement minute</string>
    <string name="time_picker_increment_hour_button">Increment hour</string>
    <string name="time_picker_decrement_hour_button">Decrement hour</string>
    <string name="time_picker_increment_set_pm_button">Set PM</string>
    <string name="time_picker_decrement_set_am_button">Set AM</string>
    <string name="time_picker_separator">:</string>
    <string name="date_picker_increment_month_button">Increment month</string>
    <string name="date_picker_decrement_month_button">Decrement month</string>
    <string name="date_picker_increment_day_button">Increment day</string>
    <string name="date_picker_decrement_day_button">Decrement day</string>
    <string name="date_picker_increment_year_button">Increment year</string>
    <string name="date_picker_decrement_year_button">Decrement year</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="AddOrder">Add Order</string>
    <string name="OrderNotes">Order Notes</string>
    <string name="OrderAddress">Order Address</string>
    <string name="OrderTotal">Order Total</string>
    <string name="OrderTime">Order Time</string>
    <string name="OrderNumber">Order Number</string>
    <string name="SplitOrder">Split</string>
    <string name="foodStamps">EBT</string>
    <string name="Credit">Credit</string>
    <string name="Check">Check</string>
    <string name="Cash">Cash</string>
    <string name="minutes">minutes</string>
    <string name="wait">Wait</string>
    <string name="Next">Next</string>
    <string name="Payment">Payment</string>
    <string name="PendingDeliveries">Pending Deliveries</string>
    <string name="DriverEarnings">Earnings</string>
    <string name="Mileage">Mileage</string>
    <string name="tips">Tips</string>
    <string name="currentEarnings">Current Earnings</string>
    <string name="creditTips">Other Tips</string>
    <string name="cashTips">Cash Tips</string>
    <string name="app_name">Delivery Droid</string>
    <string-array name="notification_types">
        <item>No Notification</item>
        <item>Notification</item>
        <item>Alarm</item>
    </string-array>
    <string-array name="DaysOfTheWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="DaysOfWeekValues">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>1</item>
    </string-array>
    <string name="StartRunDialogTitle">Start New Run?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="PreviousDelivery">Previous Delivery</string>
    <string name="EDITORDER">Edit Order</string>
    <string name="MinutesAddress">Minutes since order/Address\n</string>
    <string name="StartRunDialogMessage">Choose Yes to if you are returning to the store and the undelivered orders are
        part of the next run. Choose no if you are just organizing the deliveries.
    </string>
    <string name="OutOfTown">Out of town</string>
    <string name="edit_street_names">Edit this street name</string>
    <string name="delete_street_name">Delete this street name</string>
    <string name="add_new_street">Add a street name to this list</string>
    <string name="edit_street_name">Edit this street name</string>
    <string name="oder_number">Order Number</string>
    <string name="order_price">Order Price</string>
    <string name="Speak_address">Speak address</string>
    <string name="Save_Changes">Save Changes</string>
    <string name="order_number">Order Number</string>
    <string name="EditStreetDialogTitle">Edit Street Name</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="EditStreetDialogMessage">Type the correct spelling for this street name, or click delete to remove it
        from the list.
    </string>
    <string name="DeletetreetDialogTitle">Are you sure?</string>
    <string name="delete_street_message">Are you sure you want to delete %s from the list</string>
    <string name="NewStreetDialogTitle">Add Street Name</string>
    <string name="AddStreetDialogMessage">Enter the street name that you would like to add to the street list</string>
    <string name="drag_deliveries">Use the icon to drag deliveries in the desired order</string>
    <string name="deleteStreetButton">Delete Street</string>
    <string name="editThisStreet">Edit Street</string>
    <string name="apartmentNumber">Apt.</string>
    <string name="apartmentNumber_long">Apartment Number</string>
    <string name="SendFeedback">Send Feedback</string>
    <string name="contactdev">Contact developer to report a problem, or suggest an improvement.</string>
    <string name="Feedback">Feedback</string>
    <string name="reviewapp">Review This App</string>
    <string name="youlike">If you like this app, let people know.</string>
    <string name="Review">Review</string>
    <string name="mileageand">Mileage and Hourly pay</string>
    <string name="MileagePay">Mileage Pay</string>
    <string name="MileagePaySum">Set the amount you earn by delivery, by odometer, or as a % of total.</string>
    <string name="Mileagepayperdelivery">Mileage pay per delivery</string>
    <string name="theamount">The amount of money you get paid for each delivery by the store</string>
    <string name="theamounttitle">Dollar amount you get paid for each delivery</string>
    <string name="PayPercentageTotalTitle">Pay as percentage of total</string>
    <string name="PayPercentageSum">The percent of the order total you get paid by the store</string>
    <string name="PayPercentageTitle">Percent of order total you get paid</string>
    <string name="odometerTitle">Pay per mile on odometer</string>
    <string name="odoSum">The dollars per mile that you earn. This will trigger the odometer reading pop up</string>
    <string name="odoDiagTitle">Amount of money you get paid per mile</string>
    <string name="mileageRunTitle">Mileage pay for each run</string>
    <string name="mileageRunSum">The amount of money you get paid for each time you leave the store.</string>
    <string name="mileageRunDiagTitle">Dollar amount you get paid for each run</string>
    <string name="altMilTitle">Alt. Mileage pay (out of town)</string>
    <string name="altMilSum">The amount of money you get paid for out of town delivery by the store</string>
    <string name="altMilDiagTitle">Dollar amount you get paid for out of town deliveries</string>
    <string name="altPay2">Alt. Mileage pay 2</string>
    <string name="altPay3">Alt. Mileage pay 3</string>
    <string name="altPay4">Alt. Mileage pay 4</string>
    <string name="altPay2Sum">An alternate amount you get paid for each delivery in the Alt2 category</string>
    <string name="altPayDT">Dollar amount you get paid for the alt 2 categories of deliveries</string>
    <string name="altPayL">Alt. Mileage pay label</string>
    <string name="altPayLSum">The label used for Alternate Mileage pay</string>
    <string name="altPayLSum1">The label used for Alternate Mileage pay, such as Out Of Town.</string>
    <string name="altPayLDT">The label used for Alternate Mileage pay</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="Delivery_time">Delivery time</string>
    <string name="Order_placed">Order placed</string>
    <string name="black_color_value">#00000000</string>
    <string name="navy_color_code">#000080</string>
    <string name="quit">Quit</string>
    <string name="goBack">Go Back</string>
    <string name="undelivered">Undelivered</string>
    <string name="ebt">EBT</string>
    <string name="help">Help</string>
    <string name="email">e-mail</string>
    <string name="settings">Settings</string>
    <string name="tipsMade">Tips Made</string>
    <string name="textMessage">text message</string>
    <string name="odo_and_hr">Odometer and Hours</string>
    <string name="deleteThisShift">Delete shift</string>
    <string name="goToDay">Go to day</string>
    <string name="hoursWorked">Hours worked</string>
    <string name="MoneyCollected">Money Collected</string>
    <string name="map">Map</string>
    <string name="All_Orders">All Orders</string>
    <string name="Shift">Shift</string>
    <string name="Nav_To_Store">Navigate To Store</string>
    <string name="Search_Notes_Or_Addresses">Search Orders</string>
    <string name="set_store_address_help_bubble">To get route time displayed. Set store address in settings.</string>
    <string name="Cash_Collected">Cash Collected</string>
    <string name="Mileage_Earned">Mileage Earned</string>
    <string name="otherCollected">Other Collected</string>
    <string name="Make_a_Drop">Make a Drop</string>
    <string name="call_store">Call Store</string>
    <string name="Call">Call</string>
    <string name="sms_store">Text Message Store</string>
    <string name="Order_Cost">Order Cost</string>
    <string name="Last_Tip_Amount">Last Tip Amount</string>
    <string name="Number_of_past_deliveries">Number of deliveries</string>
    <string name="Average_percentage_tip">Average percentage tip</string>
    <string name="Average_tip_amount">Average tip amount</string>
    <string name="Order_wait_time">Order wait time</string>
    <string name="Show_bestworst_tippers_icon">Show tip icons</string>
    <string name="Bad_tip_threshold">Bad tip threshold</string>
    <string name="Good_tip_threshold">Good tip threshold</string>
    <string name="Show_an_icon_if_address_history_good_bad_tips">Show an icon if an address has a history of good or bad
        tips
    </string>
    <string name="List_display_options">List display options</string>
    <string name="Show_the_total_order_total_cost_to_the_customer">Show the total order cost to the customer</string>
    <string name="Show_the_last_tip_amount_for_the_address">Show the last tip amount for the address</string>
    <string name="Show_the_number_of_times_you_have_delivered_to_the_same_address">Show the number of times you have
        delivered to the same address
    </string>
    <string name="Show_the_time_entered_when_adding_an_order">Show the time entered when adding an order</string>
    <string name="Show_the_number_of_minutes_that_have_elapsed_since_the_time_entered_with_the_order">Show the number of
        minutes that have elapsed since the time entered with the order
    </string>
    <string name="Gps_Notes">Gate Codes</string>
    <string name="Navigate">Navigate</string>
    <string name="Gate_Codes">Gate Codes</string>
    <string name="Time_clock">Time clock</string>
    <string name="Hourly_pay">Hourly pay</string>
    <string name="Customize_List_View">Customize List</string>
    <string name="Hide_weekday_filters">Hide Filters</string>
    <string name="map_downloads">Map Downloads</string>
</resources>