<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#A000">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_menu_button"
            style="@style/slide_out_menu_button"
            android:text="@string/settings"
            app:icon="@drawable/settings"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/navigate_menu_button"
            style="@style/slide_out_menu_button"
                app:icon="@drawable/navigate_small"
            android:text="@string/Nav_To_Store" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/gps_notes_menu_button"
            style="@style/slide_out_menu_button"
                app:icon="@drawable/gps_notes"
            android:text="@string/Gps_Notes" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/shift_menu_button"
            style="@style/slide_out_menu_button"
                app:icon="@drawable/shift"
            android:text="@string/Shift" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/search_menu_button"
            style="@style/slide_out_menu_button"
                app:icon="@drawable/search"
            android:text="@string/Search_Notes_Or_Addresses" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/customize_list_menu_button"
            style="@style/slide_out_menu_button"
                app:icon="@drawable/customize_list"
            android:text="@string/Customize_List_View" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/call_store_menu_button"
             style="@style/slide_out_menu_button"
                app:icon="@drawable/text_call_small"
             android:text="@string/call_store" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/map_downloads"
                style="@style/slide_out_menu_button"
                app:icon="@drawable/map_download"
                android:text="@string/map_downloads" />
         
    </LinearLayout>
</FrameLayout>
