<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <catglo.com.deliverydroid.widgets.FlowLayout
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:background="#A000"
        >


        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_menu_button"
            style="@style/slide_out_menu_button"
            app:icon="@drawable/email_icon"
            android:text="@string/email" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/text_menu_button"
            style="@style/slide_out_menu_button"
            app:icon="@drawable/text_message1"
            android:text="@string/textMessage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggle_menu_button"
            style="@style/slide_out_menu_button"
            app:icon="@drawable/icon_filter"
            android:text="@string/Hide_weekday_filters"
            android:enabled="true" />


    </catglo.com.deliverydroid.widgets.FlowLayout>
</FrameLayout>
